--- a/app/app.css
+++ b/app/app.css
@@ -15,6 +15,14 @@ For example, the following CSS rule changes the font size of all UI
 components that have the btn class name.
 */
 
+.inner
+{
+    display: inline-block;
+    margin-top: 2px;
+    margin-left: 0px;
+    margin-right:20px;
+    font-size: 13px;
+}
 
 .boldText {
   font-weight:bold;
@@ -134,6 +142,7 @@ components that have the btn class name.
 
 .btn.btn-cancel {
   background-color: red;
+  color: white;
 }
 
 .dropdown {
