--- a/app/app.css
+++ b/app/app.css
@@ -151,3 +151,47 @@ components that have the btn class name.
   color: #006968;
   font-weight: bold;
 }
+
+.inbox-item {
+  border-style: solid;
+  border-color: black;
+  background-color: #edf3fc;
+  border-width: 2px;
+  border-bottom: 6px solid red;
+}
+
+.message {
+  font-size: 16px;
+  margin-top: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.message-send {
+  font-size: 16px;
+  color: #006968;
+  background-color: #ededed;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+.message-answer {
+  text-align: right;
+  color: white;
+  background-color: #006968;
+  padding-right: 10px;
+}
+
+.message-date {
+  margin-top: 0px;
+  font-style: italic;
+  font-size: 14px;
+  background-color: #ededed;
+  color: #006968;
+  padding-left: 10px;
+}
+
+.message-date-answer {
+  text-align: right;
+  padding-right:10px;
+}
