--- a/app/pages/error/error.component.html
+++ b/app/pages/error/error.component.html
@@ -6,4 +6,5 @@
 
 <StackLayout class="page">
   <Label class="text-danger" text="Something went wrong... Please return to the homepage" textWrap="true"></Label>
+  <Label class="text-danger" text="{{ error }}"></Label>
 </StackLayout>
