--- a/app/pages/user/user-profile.component.html
+++ b/app/pages/user/user-profile.component.html
@@ -6,8 +6,10 @@
 <StackLayout orientation="vertical" class="page">
   <ScrollView>
     <StackLayout>
-
-      <Button class="btn btn-outline btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
+      <GridLayout columns="*, *">
+        <Button col="0" class="btn btn-primary btn-lg btn-active" text="Inbox" (tap)="navigateToInbox()"></Button>
+        <Button col="1" class="btn btn-outline btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
+      </GridLayout>
 
       <Label text="&#xA;"></Label>
       <Label class="h3 text-center" text="My garments"></Label>
