Revert "merge conflicts resolved"
This reverts commit a58d7557fdcf91310f751bf21568338cfbdb1831, reversing
changes made to e79f232a6a9a8d82175bcc82db89bd5e5dcb2fa3.

--- a/app/pages/user/user-profile.component.html
+++ b/app/pages/user/user-profile.component.html
@@ -1,22 +1,22 @@
 <ActionBar class="action-bar">
-    <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="navigateToHome()"></NavigationButton>
-    <Label class="action-bar-title" text="Profile"></Label>
+  <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="navigateToHome()"></NavigationButton>
+  <Label class="action-bar-title" text="Profile"></Label>
 </ActionBar>
 
 <StackLayout orientation="vertical" class="page">
-    <ScrollView>
-        <StackLayout>
-            <GridLayout columns="*,*,*">
-                <Button col="0" class="btn btn-primary btn-lg btn-active" text="Inbox" (tap)="navigateToInbox()"></Button>
-                <Button col="1" class="btn btn-primary btn-lg btn-active" text="My details" (tap)="navigateToContact()"></Button>
-                <Button col="2" class="btn btn-outline btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
-            </GridLayout>
+  <ScrollView>
+    <StackLayout>
 
-            <Label text="&#xA;"></Label>
-            <Label class="h3 text-center" text="My garments"></Label>
+      <GridLayout columns="*, *">
+      <Button col="0" class="btn btn-outline btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
+      <Button col="1" class="btn btn-primary btn-lg btn-active" text="My details" (tap)="navigateToContact()"></Button>
+      </GridLayout>
 
-            <app-garment-overview [(garmentsUrl)]="garmentsUrl"></app-garment-overview>
+      <Label text="&#xA;"></Label>
+      <Label class="h3 text-center" text="My garments"></Label>
 
-        </StackLayout>
-    </ScrollView>
+      <app-garment-overview [(garmentsUrl)]="garmentsUrl"></app-garment-overview>
+
+    </StackLayout>
+  </ScrollView>
 </StackLayout>
