--- a/app/pages/login/login.component.html
+++ b/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <ActionBar class="action-bar">
-    <Label class="action-bar-title" text="Login"></Label>
+    <Label class="action-bar-title" text="Welcome"></Label>
 </ActionBar>
 
 <StackLayout class="page">
