reset to latest version

--- a/app/app.css
+++ b/app/app.css
@@ -211,3 +211,10 @@ components that have the btn class name.
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.link-item {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 8px;
+  font-style: italic;
+}
