--- a/app/pages/user/user-profile.component.html
+++ b/app/pages/user/user-profile.component.html
@@ -7,9 +7,9 @@
   <ScrollView>
     <StackLayout>
       <GridLayout columns="*,*,*">
-         <Button col="1" class="btn btn-primary btn-lg btn-active" text="My details" (tap)="navigateToContact()"></Button>
-        <Button col="0" class="btn btn-primary btn-lg btn-active" text="Inbox" (tap)="navigateToInbox()"></Button>
-        <Button col="1" class="btn btn-outline btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
+         <Button col="0" class="btn btn-primary btn-lg btn-active" text="My details" (tap)="navigateToContact()"></Button>
+        <Button col="1" class="btn btn-primary btn-lg btn-active" text="Inbox" (tap)="navigateToInbox()"></Button>
+        <Button col="2" class="btn btn-primary btn-lg btn-active" text="Add Garment" (tap)="navigateToAddGarment()"></Button>
       </GridLayout>
 
       <Label text="&#xA;"></Label>
