--- a/app/pages/garments/garment-input-fields/garment-input-fields.component.html
+++ b/app/pages/garments/garment-input-fields/garment-input-fields.component.html
@@ -10,7 +10,7 @@
               row="0"
               rowSpan="2">
      </DropDown>
-     <Label text="Type:"
+     <Label *ngIf="!garment.garmentType" text="Type:"
               row="0"
               fontSize="18"
               class="input-field dropdown-text"></Label>
